rust/mlt/src/snapshots/mlt__ls__tests__a_lone_info_row_renders_without_a_total_row.snap
---
source: mlt/src/ls.rs
expression: "render_table(&[info_row(mlt_info(\"a.mlt\"))], LsFlags::default())"
---
 File  |   Size | Enc % | Decoded | Meta | Meta % | Layer | Feature | Stream | Geometry Types 
-------+--------+-------+---------+------+--------+-------+---------+--------+----------------
 a.mlt | 12.3kB |   62% |  32.0kB | 900B |   2.8% |     3 |   1,234 |     42 | Pt,Poly
