rust/mlt/src/snapshots/mlt__ls__tests__a_mixed_total_row_falls_back_to_dashes_for_the_decoded_columns.snap
---
source: mlt/src/ls.rs
expression: "render_table(&[info_row(mlt_info(\"a.mlt\")), info_row(mvt_info(\"b.mvt\"))],\nGZIP)"
---
 File  |   Size | Enc % | Decoded | Meta | Meta % | Gzipped | Gz % | Layer | Feature | Stream | Geometry Types 
-------+--------+-------+---------+------+--------+---------+------+-------+---------+--------+----------------
 a.mlt | 12.3kB |   62% |  32.0kB | 900B |   2.8% |   9.0kB |  27% |     3 |   1,234 |     42 | Pt,Poly        
 b.mvt | 54.3kB |     - |       - |    - |      - |       - |    - |     2 |     500 |      - | Line           
-------+--------+-------+---------+------+--------+---------+------+-------+---------+--------+----------------
 TOTAL | 66.6kB |     - |       - |    - |      - |   9.0kB |  86% |     5 |   1,734 |      - |
