rust/mlt/src/snapshots/mlt__ls__tests__an_error_row_spans_the_remaining_columns.snap
---
source: mlt/src/ls.rs
expression: "render_table(&[info_row(mlt_info(\"a.mlt\")),\nerror_row(\"broken.mlt\", Some(777)), error_row(\"missing.mlt\", None),],\nLsFlags::default())"
---
 File        |   Size | Enc % | Decoded | Meta | Meta % | Layer | Feature | Stream | Geometry Types 
-------------+--------+-------+---------+------+--------+-------+---------+--------+----------------
 a.mlt       | 12.3kB |   62% |  32.0kB | 900B |   2.8% |     3 |   1,234 |     42 | Pt,Poly        
 broken.mlt  | 777B                                                                                 
 missing.mlt |
