rust/mlt/src/snapshots/mlt__ls__tests__the_gzip_flag_adds_the_gzipped_and_gz_percent_columns.snap
---
source: mlt/src/ls.rs
expression: "render_table(&[info_row(mlt_info(\"a.mlt\"))], GZIP)"
---
 File  |   Size | Enc % | Decoded | Meta | Meta % | Gzipped | Gz % | Layer | Feature | Stream | Geometry Types 
-------+--------+-------+---------+------+--------+---------+------+-------+---------+--------+----------------
 a.mlt | 12.3kB |   62% |  32.0kB | 900B |   2.8% |   9.0kB |  27% |     3 |   1,234 |     42 | Pt,Poly
