rust/mlt/src/snapshots/mlt__ls__tests__validating_an_unvalidated_row_shows_a_dash_in_the_json_column.snap
---
source: mlt/src/ls.rs
expression: "render_table(&[info_row(mlt_info(\"a.mlt\"))], VALIDATE)"
---
 File  |   Size | Enc % | Decoded | Meta | Meta % | Layer | Feature | Stream | Geometry Types | JSON 
-------+--------+-------+---------+------+--------+-------+---------+--------+----------------+------
 a.mlt | 12.3kB |   62% |  32.0kB | 900B |   2.8% |     3 |   1,234 |     42 | Pt,Poly        | -
