rust/mlt/src/snapshots/mlt__ls__tests__validating_hides_a_matching_row_but_keeps_an_error_row.snap
---
source: mlt/src/ls.rs
expression: "render_table(&[info_row(validated(mlt_info(\"a.mlt\"), true)),\nerror_row(\"broken.mlt\", Some(777)),], VALIDATE)"
---
 File       | Size |                      Enc % | Decoded | Meta | Meta % | Layer | Feature | Stream | Geometry Types | JSON 
------------+------+----------------------------+---------+------+--------+-------+---------+--------+----------------+------
 broken.mlt | 777B | ERROR: unsupported version |         |      |        |       |         |        |                |
